--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,9 @@ configurations {
 }
 
 dependencies {
+    implementation group: 'com.google.guava', name: 'guava', version: '31.0.1-jre'
+
+
     def log4j_version = '2.17.1'
     api group: 'org.apache.logging.log4j', name: 'log4j-core', version: log4j_version
     logImpl group: 'org.apache.logging.log4j', name: 'log4j-core', version: log4j_version
