--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,10 @@ configurations {
 
 dependencies {
     implementation group: 'com.google.guava', name: 'guava', version: '31.0.1-jre'
+    implementation group: 'org.jgrapht', name: 'jgrapht-core', version: '1.5.1'
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0")
+    implementation group: 'org.jgrapht', name: 'jgrapht-unimi-dsi', version: '1.5.1'
+
 
 
     def log4j_version = '2.17.1'
